<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
                name="data"
                type="com.verdite.samples.reactivesearch.data.model.Stock" />
    </data>

    <com.thelumiereguy.neumorphicview.views.NeumorphicCardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:focusable="false"
            android:paddingBottom="@dimen/_7sdp"
            app:cardRadius="@dimen/fullyRoundedCorners"
            app:enableShadow="true"
            app:enable_preview="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header"
            app:neu_backgroundColor="@color/background.gradient.end"
            app:shadowColor="@color/background.gradient.end"
            app:shadowDy="@dimen/_2sdp"
            app:shadowRadius="@dimen/_4sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button_darker_rounded_corners"
                android:clickable="true"
                android:focusable="true">

            <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/shapeableImageView"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shapeAppearance="@style/roundedCornersImage"
                    tools:src="@drawable/rs_ph_avatar" />

            <TextView
                    android:id="@+id/name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/space.4XS"
                    android:layout_marginEnd="@dimen/space.4XS"
                    android:ellipsize="end"
                    android:fontFamily="@font/montserrat_medium"
                    android:maxLines="4"
                    android:text="@{data.name}"
                    android:textAlignment="viewStart"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text.S"
                    app:layout_constraintBottom_toTopOf="@+id/ticker"
                    app:layout_constraintEnd_toStartOf="@+id/change"
                    app:layout_constraintStart_toEndOf="@+id/shapeableImageView"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed"
                    tools:text="@string/placeholder_stock_name" />

            <TextView
                    android:id="@+id/ticker"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/space.4XS"
                    android:fontFamily="@font/montserrat_medium"
                    android:maxLines="1"
                    android:text="@{data.name}"
                    android:textAllCaps="true"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/text.3XS"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/shapeableImageView"
                    app:layout_constraintTop_toBottomOf="@+id/name"
                    tools:text="@string/placeholder_stock_ticker" />

            <TextView
                    android:id="@+id/price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:maxLines="1"
                    android:text="@{data.name}"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text.3XS"
                    app:layout_constraintBottom_toTopOf="@+id/change"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed"
                    tools:text="@string/placeholder_stock_price" />

            <View
                    android:id="@+id/status"
                    android:layout_width="@dimen/_10sdp"
                    android:layout_height="@dimen/_10sdp"
                    android:background="@drawable/rs_circle_selector"
                    app:layout_constraintBottom_toBottomOf="@+id/change"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/change" />

            <TextView
                    android:id="@+id/change"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/space.8XS"
                    android:fontFamily="@font/montserrat_medium"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:text="@{data.name}"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text.3XS"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/status"
                    app:layout_constraintTop_toBottomOf="@+id/price"
                    tools:text="@string/placeholder_stock_gain"
                    tools:textColor="@color/green" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.thelumiereguy.neumorphicview.views.NeumorphicCardView>

</layout>